import { IContextService } from "@/lib/core/IContextService"
import { IMetadataService } from "@/lib/core/IMetadataService"
import { IProfileService } from "@/lib/core/profiles/IProfileService"

/**
 * Top-level orchestrator for all RO-Crate domain operations on the currently
 * open crate. Implementations should depend on {@link ICrateService}, which
 * is provided by the current persistence layer.
 *
 * {@link ICoreService} coordinates between the core layer
 * ({@link IMetadataService}, {@link IContextService}) and the persistence layer ({@link ICrateService}):
 * for example, {@link ICoreService.addFileEntity} uploads the file bytes via
 * the file service *and* registers the corresponding entity in the metadata
 * graph. It is persistence-agnostic — it does not know whether storage is
 * browser OPFS, a remote server, or something else.
 *
 * Exposed to React components via the
 * {@link useCore} hook (provided by {@link CoreProvider}).
 *
 * Child services are accessible through the getter methods:
 * - {@link ICoreService.getMetadataService} for direct entity CRUD
 * - {@link ICoreService.getContextService} for `@context` inspection and mutation
 */
export interface ICoreService {
    /**
     * Upload `file` to `path` inside the crate and create a corresponding
     * data entity with the given `name` in the metadata graph.
     * @param name - Human-readable name for the entity.
     * @param types - Types on the entity (must require at least File). Shortened terms are expected here.
     * @param path - Crate-relative path where the file will be stored.
     * @param file - The file bytes to upload.
     * @param overwrite - If `true`, overwrites any existing entity with the
     *   same `@id`. Defaults to `false`.
     */
    addFileEntity(
        name: string,
        types: string | string[],
        path: string,
        file: File,
        overwrite?: boolean
    ): Promise<void>
    /**
     * Create a folder at `path` inside the crate and add a corresponding
     * data entity with the given `name` to the metadata graph.
     * @param name - Human-readable name for the entity.
     * @param types - Types on the entity (must require at least File). Shortened terms are expected here.
     * @param path - Crate-relative path of the new folder.
     * @param overwrite - If `true`, overwrites any existing entity with the
     *   same `@id`. Defaults to `false`.
     */
    addFolderEntity(
        name: string,
        types: string | string[],
        path: string,
        overwrite?: boolean
    ): Promise<void>
    /**
     * Rename an entity's `@id` from `from` to `to`. If the entity is a data
     * entity backed by a file or folder, the physical path is also moved via
     * {@link IFileService}. Any contained entities will also have their identifiers changed.
     * This can also be called if there is no entity at `from`, then the file or folder at `from`
     * will be moved, and any entities linked to contained files will be changed appropriately.
     * @param from - The current `@id` of the entity. Can alternatively be the path to an existing file or folder in the crate with no matching entity.
     * @param to - The new `@id` to assign. Can alternatively be the new path for the file or folder.
     */
    moveEntity(from: string, to: string): Promise<void>
    /**
     * Remove an entity from the metadata graph. If `deleteData` is `true` and
     * the entity is a data entity, the corresponding file or folder is also
     * deleted from storage via {@link IFileService}.
     * @param id - The `@id` of the entity to delete.
     * @param deleteData - Whether to also delete the associated file/folder from storage.
     */
    deleteEntity(id: string, deleteData: boolean): Promise<void>
    /** Returns the {@link IContextService} for the currently open crate. */
    getContextService(): IContextService
    /** Returns the {@link IMetadataService} for the currently open crate. */
    getMetadataService(): IMetadataService
    /** Returns the {@link IProfileService} for the currently open crate. */
    getProfileService(): IProfileService
}
