import { IObservable } from "@/lib/core/IObservable"
import { IProfileHandler } from "@/lib/core/profiles/IProfileHandler"
import { EntityRule } from "@/lib/core/profiles/types/EntityRule"
import { PropertyRule } from "@/lib/core/profiles/types/PropertyRule"
import { ProfileEntityMapping } from "@/lib/core/profiles/types/ProfileEntityMapping"

export type IProfileServiceEvents = {
    /**
     * This event is emitted whenever the ready state of the profiles changes or
     * when a new list of profiles is activated. This event may be called redundantly (e.g. called with "true" twice )
     */
    "all-ready-changed": (ready: boolean) => void
    /**
     * This event is emitted whenever the list of profiles URIs changes.
     */
    "profile-uris-changed": (profileURIs: string[]) => void
    /**
     * This event is emitted whenever the list of active profiles handlers ({@link IProfileHandler} instances) changes.
     */
    "profiles-changed": (profiles: IProfileHandler[]) => void
    /**
     * This event is emitted whenever the entity mappings of one of the profiles changes. Provides a merged view of the entity mappings of each profile
     */
    "mappings-updated": (entityMappings: Map<string, ProfileEntityMapping[]>) => void
    /**
     * This event is emitted whenever the service or any profiles emit an error.
     */
    "error-emitted": () => void
}

/**
 * This service is responsible for creating {@link IProfileHandler} instances from profile URIs and managing their lifecycle.
 */
export interface IProfileService {
    readonly events: IObservable<IProfileServiceEvents>

    /**
     * Returns true if all profiles are ready to be used. This is true iff
     * - setProfileURIs has been called and the Promise returned by setProfileURIs has been settled
     * - all profiles are ready
     */
    getAllReady(): boolean

    /**
     * Get a list of all errors that occurred during **parsing** of all profiles.
     */
    getAllErrors(): string[]

    /**
     * Set the list of profile URIs that are currently active. This will trigger parsing of all
     * supplied profiles. Once this method returns, all profiles are constructed and available
     * through {@link getProfileHandlers}. Profiles may not be in the ready state at this point. Use
     * {@link getAllReady} and/or {@link events} to check if all profiles are ready.
     * @param profileURIs Array of profile URIs to activate
     */
    setProfileURIs(profileURIs: string[]): Promise<void>

    /**
     * Get a list of all profile URIs that are currently active. This list is complete immediately after
     * {@link setProfileURIs} is called.
     */
    getProfileURIs(): string[]

    /**
     * Get the profile handlers that are currently active. This is set by {@link setProfileURIs}. Note that
     * the returned array may be incomplete as long as the Promise returned by {@link setProfileURIs}
     * is not yet settled.
     */
    getProfileHandlers(): IProfileHandler[]

    /**
     * Get a currently active profile handler by its id. Returns undefined if no handler with the
     * supplied id exists
     * @param id
     */
    getProfileHandler(id: string): IProfileHandler | undefined

    /**
     * Get a combined map of entity ids to applied profile rules
     */
    getEntityMappings(): Map<string, ProfileEntityMapping[]>

    /**
     * Find all property rules defined on the given entity rules
     * @param entityRules
     */
    getPropertiesFor(entityRules: EntityRule[]): PropertyRule[]
}
